--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 serde = { version = "1.0.219", features = ["derive"] }
-quick-xml = { version = "0.38", features = ["serialize"] }
+serde-xml-rs = "0.8.1"
+xml-rs = "0.8.27"
