--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ serde-xml-rs = "0.8.1"
 xml-rs = "0.8.27"
 uuid = { version = "1.18.0", features = ["v4", "v7", "serde"] }
 regex = "1.11.2"
-
+tokio-postgres = "0.7.15"
+tokio = { version="1.48.0", features = ["full"] }
+quick-xml = { version="0.38.4", features = ["serde", "serialize"]}
 [lib]
 doctest = false
