--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ regex = "1.11.2"
 tokio-postgres = "0.7.15"
 tokio = { version="1.48.0", features = ["full"] }
 quick-xml = { version="0.38.4", features = ["serde", "serialize"]}
+unicode-normalization = "0.1.25"
 [lib]
 doctest = false
