--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2024"
 serde = { version = "1.0.219", features = ["derive"] }
 uuid = { version = "1.18.0", features = ["v4", "v7", "serde"] }
 regex = "1.11.2"
-tokio-postgres = "0.7.15"
-tokio = { version="1.48.0", features = ["full"] }
+#tokio-postgres = "0.7.15"
+#tokio = { version="1.48.0", features = ["full"] }
 quick-xml = { version="0.38.4", features = ["serde", "serialize"]}
 unicode-normalization = "0.1.25"
 [lib]
