--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = { version = "1.0.219", features = ["derive"] }
-uuid = { version = "1.18.0", features = ["v4", "v7", "serde"] }
+uuid = { version = "1.18.0", features = ["v4"] }
 regex = "1.11.2"
+quick-xml = { version="0.38.4", features = []}
+unicode-normalization = "0.1.25"
 #tokio-postgres = "0.7.15"
 #tokio = { version="1.48.0", features = ["full"] }
-quick-xml = { version="0.38.4", features = ["serde", "serialize"]}
-unicode-normalization = "0.1.25"
+
 [lib]
 doctest = false
