--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ uuid = { version = "1.18.0", features = ["v4", "serde"] }
 regex = "1.11.2"
 quick-xml = { version="0.38.4", features = []}
 unicode-normalization = "0.1.25"
+rustybuzz = "0.20.1"
 #tokio-postgres = "0.7.15"
 #tokio = { version="1.48.0", features = ["full"] }
 
